k8s/httpbin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  type: LoadBalancer
  selector:
    app: httpbin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8900
